locales for standard added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 #
 en:
   errship3:
+    standard: 'An unknown error has occurred, or you have reached this page by mistake.'
     '404':
       title: 'This page does not even exists'
       description: 'Do not freak out, everything is going to be OK. It could have moved, or someone (maybe you!) mistyped the URL or some other horrible error has occurred. Can you please try again?'
